--- a/_posts/0000-01-02-Ioanafilip99.md
+++ b/_posts/0000-01-02-Ioanafilip99.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-new new text!!!!!!!!!
+new new text!!!!!!!!! :tada:
 Use the left arrow to go back!
